# reader-vl

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements.dev.txt  requirements.txt
reader_vl/: __init__.py  document_reader.py
reader_vl/docs/: schemas.py  utils.py
reader_vl/docs/structure/: core.py  registry.py  schemas.py
reader_vl/docs/yolo/: __init__.py  yolo.py
reader_vl/llm/: client.py  schemas.py  utils.py  vllm.py
reader_vl/llm/openai/: __init__.py  client.py
reader_vl/llm/vllm/: __init__.py  client.py
reader_vl/models/: utils.py
reader_vl/parser/: __init__.py  docx.py  pdf.py  schemas.py
